--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,5 +1,42 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap');
+
 *{
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: 'Lato', sans-serif;
+}
+
+/* Navbar styles */
+.navbar {
+    padding: 20px;
+}
+.navbar .container {
+    overflow: hidden;
+}
+.navbar ul{
+    display: flex;
+    list-style-type: none;
+}
+.navbar li{
+    text-decoration: none;
+    padding: 10px;
+    margin-top: 0 5px;
+    font-size: 1.2rem;
+    font-weight: 400;
+    cursor: pointer;
+    transform: rotate(0deg);
+    transition: transform 0.3s ease;
+}
+.navbar h1{
+    font-size: 2rem;
+    font-weight: 900;
+    cursor: pointer;
+    transition: transform 0.3s ease;
+}
+.navbar h1:hover {
+    transform: scale(1.2);
+}
+.navbar li:hover {
+    transform: rotate(360deg);
 }
