--- a/CSS/utilities.css
+++ b/CSS/utilities.css
@@ -1,6 +1,13 @@
-.container{
+.container {
     max-width: 1440px;
     margin: auto;
     overflow: auto;
     padding: 0 40px;
+}
+
+.flex {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 100%;
 }
