--- a/CSS/utilities.css
+++ b/CSS/utilities.css
@@ -11,3 +11,11 @@
     align-items: center;
     height: 100%;
 }
+
+.grid{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-content: center;
+    align-items: center;
+    height: 100%; 
+}
