--- a/CSS/utilities.css
+++ b/CSS/utilities.css
@@ -1,7 +1,7 @@
 .container {
     max-width: 1440px;
-    margin: auto;
-    overflow: auto;
+    margin: 0 auto;
+    overflow: 0 auto;
     padding: 0 40px;
 }
 
