edited recent project cards

--- a/CSS/utilities.css
+++ b/CSS/utilities.css
@@ -16,6 +16,6 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     justify-content: center;
-    align-items: center;
+    place-items: center;
     height: 100%; 
 }
