--- a/CSS/style.css
+++ b/CSS/style.css
@@ -149,6 +149,9 @@ img {
     height: 700px;
     padding-top: 9rem;
 }
+.recent-proj .grid {
+    grid-template-columns: 1fr 1fr 1fr;
+}
 .recent-proj h1 {
     font-weight: 900;
     color: #141c3a;
@@ -159,8 +162,9 @@ img {
     font-size: 1.1rem;
     margin-bottom: 5rem;
 }
+/* recent projects card */
 .article-wrapper {
-    width: 250px;
+    width: 350px;
     -webkit-transition: 0.15s all ease-in-out;
     transition: 0.15s all ease-in-out;
     border-radius: 10px;
@@ -173,7 +177,7 @@ img {
   .article-wrapper:hover {
     -webkit-box-shadow: 10px 10px 0 #4e84ff, 20px 20px 0 #4444bd;
     box-shadow: 10px 10px 0 #4e84ff, 20px 20px 0 #4444bd;
-    border-color: #0578c5;
+    border-color: #5BE9B9;
     -webkit-transform: translate(-20px, -20px);
     -ms-transform: translate(-20px, -20px);
     transform: translate(-20px, -20px);
@@ -244,8 +248,9 @@ img {
   }
   
   .project-type {
-    background: #b2b2fd;
-    color: #1a41cd;
+    background: #5BE9B9;
+    color: #141c3a;
+    /* #1a41cd; */
     font-weight: bold;
     padding: 0.3em 0.7em;
     border-radius: 15px;
@@ -267,4 +272,8 @@ img {
     height: 170px;
     background: gray;
   }
-  
+  .recent-proj img{
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+  }
