--- a/CSS/style.css
+++ b/CSS/style.css
@@ -149,6 +149,7 @@ img {
     line-height: 1.5;
     height: 700px;
     padding-top: 9rem;
+    margin-bottom: 100px;
 }
 .recent-proj .grid {
     grid-template-columns: 1fr 1fr 1fr;
@@ -278,3 +279,26 @@ img {
     height: 100%;
     border-radius: 10px;
   }
+
+  /* footer section */
+  .footer-section {
+    height: 400px;
+    text-align: center;
+    background-color: #5BE9B9;
+  }
+  .footer-section .flex {
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+  }  
+  .footer-section h1 {
+    font-size: 2rem;
+    font-weight: 900;
+    cursor: pointer;
+    color: #141c3a;
+  }
+  .footer-socials ion-icon {
+    font-size: 50px;
+    padding: 0 10px;
+  }
+  
