--- a/CSS/style.css
+++ b/CSS/style.css
@@ -282,7 +282,7 @@ img {
 
   /* footer section */
   .footer-section {
-    height: 400px;
+    height: 300px;
     text-align: center;
     background-color: #5BE9B9;
   }
@@ -291,14 +291,15 @@ img {
     justify-content: space-evenly;
     align-items: center;
   }  
-  .footer-section h1 {
+  /* .footer-section h1 {
     font-size: 2rem;
     font-weight: 900;
     cursor: pointer;
     color: #141c3a;
-  }
+  } */
   .footer-socials ion-icon {
-    font-size: 50px;
+    font-size: 30px;
     padding: 0 10px;
+    color: #141c3a;
   }
   
