--- a/CSS/style.css
+++ b/CSS/style.css
@@ -121,7 +121,7 @@ img {
 .skills {
   text-align: center;
   line-height: 1.5;
-  height: 500px;
+  height: 100%;
 }
 
 .skills h1 {
@@ -333,7 +333,7 @@ img {
 
 /* Responsiveness */
 @media(max-width:1024px) {
-  
+
   .introduction .intro-foot img {
     width: 100%;
     height: 100%;
@@ -353,7 +353,7 @@ img {
 }
 
 @media(max-width:768px) {
-  .introduction .intro-body .img {
+  .introduction .intro-body img {
     width: 250px;
     height: 250px;
   }
@@ -362,7 +362,7 @@ img {
     width: 100%;
     height: 100%;
   }
-  
+
   .intro-medium p {
     margin: 1.5rem 3rem;
   }
@@ -375,4 +375,29 @@ img {
     grid-template-columns: 1fr;
     gap: 30px;
   }
+}
+
+@media(max-width:414px) {
+  .introduction h1 {
+    font-size: 2.5rem;
+  }
+
+  .introduction .intro-body img {
+    width: 150px;
+    height: 150px;
+  }
+
+  .introduction .intro-foot img {
+    width: 100%;
+    height: 100%;
+  }
+
+  .intro-medium p {
+    margin: 1rem 1rem;
+  }
+
+  .skills .grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
 }
