--- a/CSS/utilities.css
+++ b/CSS/utilities.css
@@ -19,3 +19,88 @@
     place-items: center;
     height: 100%; 
 }
+
+.hamburger{
+    cursor: pointer;
+    width: 24px;
+    height: 24px;
+    position: relative;
+    background: none;
+    border: none;
+    z-index: 10; /* always on top */
+    transition: all 0.25s;
+    display: none;
+}
+.hamburger-top,
+.hamburger-middle,
+.hamburger-bottom{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 24px;
+    height: 2px;
+    background: black;
+    transform: rotate(0);
+    transition: all 0.25s;
+}
+.hamburger-middle{
+    transform: translateY(7px); 
+}
+.hamburger-bottom{
+    transform: translateY(14px); 
+}
+.open .hamburger-top{
+    transform: rotate(45deg) translateY(6px) translateX(6px);
+}
+.open .hamburger-middle{
+    display: none;
+}
+.open .hamburger-bottom{
+    transform: rotate(-45deg) translateY(6px) translateX(-6px);
+}
+
+/* Mobile Menu */
+.mobile-menu{
+    position: fixed;
+    top: 85px;
+    right: 0;
+    width: 90%;
+    height: 100%;
+    color: #000;
+    padding: 30px;
+    /* Box Shadow */
+    box-shadow: inset 0 4px 3px -3px rgb(0 0 0 / 10%),
+    inset 0 4px 2px -2px rgb(0 0 0 / 7%);
+    background-color: white;
+    transition: all 0.3s;
+}
+.mobile-menu ul{
+    line-height: 3;
+    border-bottom: #777 solid 1px;
+    /* width: 85%;
+    margin: 0 auto; */
+    padding-bottom: 10px;
+    margin-bottom: 30px;
+}
+.mobile-menu a{
+    text-decoration: none;
+    font-size: 20px;
+}
+.mobile-menu a:hover{
+    color: var(--color-primary);
+}
+.mobile-menu div{
+    margin-top: 20px;
+}
+.mobile-menu div a{
+    display: flex;
+    align-items: center;
+    font-size: 16px;
+}
+.hidden{
+    transform: translateX(100%);
+}
+.no-scroll{
+    overflow: hidden;
+}
+
